@@ -1,5 +1,6 @@
 5/6/25:
 
+- Create space for display/DOM code
 - Rename resetGame to resetGameboard
 - Move resetGame function location
 - Create resetGame function to clear board and set to player 1's turn
